--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
          data-pagination
          data-miniature
          data-interval="3000"
-         data-carusel
+         data-carousel
          data-autoplay
          data-start="2"
     >
