--- a/src/index.html
+++ b/src/index.html
@@ -3,24 +3,33 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Page Title</title>
+  <title>Slider Carousel</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+      .header {
+        padding: 10% 20px;
+      }
+      .wrap {
+        padding: 20px;
+        margin: auto;
+      }
+      @media screen and ( min-width:800px ) {
+        .wrap {
+          width: 60%;
+        }
+      }
   
+    </style>
 </head>
 <body>
-  <style>
-    .wrap {
-      padding: 20px;
-      margin: auto;
-    }
-    @media screen and ( min-width:800px ) {
-      .wrap {
-        width: 60%;
-      }
-    }
-
-  </style>
+  <header class="header">
+    <h1 class="title">KVA-SLIDER</h1>
+    <p></p>
+    <a href="download.kva-slider.zip">Download</a>
+  </header>
+  
   <div class="wrap">
+    
     <div class="kva-widget"
          data-pagination
          data-miniature
