return last commit

--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Slider Carousel</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-      .wrap {
-        padding: 20px;
-        margin: auto;
-      }
-      @media screen and ( min-width:800px ) {
-        .wrap {
-          width: 60%;
-        }
-      }
-  
-    </style>
+  <link rel="stylesheet" href="assets/css/kva-slider.css">
+  <link rel="stylesheet" href="assets/css/main.css">
+
 </head>
 <body>
   
